# Spectra

./: .coveragerc  .dockerignore  .env.example  .env.live.example  .env.test  .env.test.example  .gitignore  .gitleaks.toml  .name || w)}')"|data-action="clipCopy" data-value="${escapeAttr(w.path || w.name || w)}"|g  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Makefile  PERFECT_PROMPT.md  README.md  README.old.md  SPECTRA_FABLE_SHIM.md  SPECTRA_PERFECTION_CONTEXT.md  alembic.ini  benchmark.py  benchmark_rag.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-app.txt  requirements-embeddings-local.txt  requirements-tools.txt  requirements.txt  run_test.py  tailwind.config.js  test_perf.py  version.py
.github/: dependabot.yml
.jules/: bolt.md  sentinel.md
.playwright-mcp/: page-2026-05-03T21-36-56-437Z.yml  page-2026-05-03T21-37-14-634Z.yml  page-2026-05-03T21-38-41-811Z.yml  page-2026-05-03T22-45-29-183Z.yml  page-2026-05-03T23-00-26-040Z.yml  page-2026-05-03T23-03-22-383Z.yml  page-2026-05-03T23-28-58-711Z.yml
alembic/: env.py
app/: __init__.py  ai_service.py  main.py  (+5 more)
services/ai/: pyproject.toml
services/ai/src/spectra_ai/: __init__.py  db.py  embeddings.py  llm.py  main.py  rag.py  router.py  sanitizer.py  settings.py  telemetry_hooks.py
services/api/: pyproject.toml
services/api/src/spectra_api/: __init__.py  authz.py  errors.py  factory.py  main.py  paths.py  routing.py  telemetry_middleware.py  templates.py
services/api/src/spectra_api/api/: __init__.py  dependencies.py  mcp.py
services/api/src/spectra_api/api/routers/: __init__.py  billing.py  cve.py  exploits.py  export.py  health.py  manual_helpers.py  observability.py  pentest_session_schemas.py  pentest_sessions.py  settings_runtime.py  shell.py  targets.py  tools.py  user_settings.py  vpn.py  wordlists.py
services/api/src/spectra_api/api/routers/admin/: __init__.py  audit.py  content.py  email.py  monitoring.py  plans.py  rollback.py  server_schemas.py  servers.py  settings.py  tensorzero.py  training.py  users.py
services/api/src/spectra_api/api/routers/auth/: __init__.py  _helpers.py  login.py  password.py  registration.py  schemas.py  session.py  totp.py
services/api/src/spectra_api/api/routers/findings/: __init__.py  bulk.py  core.py
services/api/src/spectra_api/api/routers/missions/: __init__.py  _resolve.py  artifacts.py  core.py  export.py  feedback.py  mission_catalog.py  mission_lifecycle.py
services/api/src/spectra_api/api/routers/system/: __init__.py  data_sources.py  health.py  operations.py  schemas.py
services/api/src/spectra_api/api/schemas/: __init__.py  common.py  cve.py  exploit.py  finding.py  mission.py  system.py  tool.py  user_settings.py
services/api/src/spectra_api/bootstrap/: __init__.py  lifespan.py  logging_config.py  middleware.py
services/api/src/spectra_api/services/: __init__.py
services/api/src/spectra_api/services/system/: __init__.py  settings_service.py  setup.py
services/api/src/spectra_api/ui/: __init__.py  guide.py  pages.py  public.py  spa.py
services/api/static/: manifest.json  robots.txt
services/api/static/css/: admin.css  auth.css  base.css  dark-theme-tokens.css  dashboard.css  errors.css  input.css  landing.css  legal.css  output.css  tokens.css
services/api/static/js/: api.js  confirm.js  cookie-consent.js  helper_data.js  landing.js  reconnecting-ws.js  settings.js  shared-utils.js  toolbox.js
services/api/static/js/modules/: delegated-events.js  severity.js  sidebar.js  tabs.js  toast.js
services/api/static/js/pages/: history.js  observability.js  overseer.js  reports.js  status.js
services/api/static/js/pages/admin/: ai-gateway.js  audit.js  backups.js  content.js  core.js  dashboard.js  email.js  plans.js  rollback.js  scaling.js  services.js  tensorzero.js  training.js  usage.js  users.js
services/api/static/js/pages/auth/: login.js
services/api/static/js/pages/dashboard/: charts.js  core.js  findings.js  init.js  mission-control.js  shells.js  tasks.js  websocket.js
services/api/static/js/pages/manual-tools/: checklist.js  core.js  cve.js  encoder.js  helpers.js  history.js  orchestrator.js  pipeline.js  ports.js  results.js  revshell.js  scope.js  session.js  tips.js  tool-execution.js  tool-findings.js  tool-form.js  tool-picker.js  wordlists.js
services/api/static/js/pages/profile/: account.js  activity.js  api-keys.js  billing.js  core.js  mfa.js  privacy.js  settings.js
services/api/static/js/pages/settings/: data.js  topology.js  vpn.js
services/api/static/js/pages/targets/: attack-surface.js  core.js  grid.js  import.js  shell.js
services/api/templates/: admin.html  auth_layout.html  base.html  changelog.html  dashboard.html  forgot_password.html  help.html  history.html  landing.html  login.html  manual_tools.html  observability.html  plugin_creator.html  profile.html  register.html  reports.html  reset_password.html  security.html  settings.html  setup.html  status.html  targets.html  verify_email.html
services/api/templates/admin/: _dashboard.html  _other_sections.html  _scaling.html  _services.html  _sidebar.html  _training.html  _users.html
services/api/templates/errors/: 400.html  404.html  405.html  500.html  504.html  maintenance.html
services/api/templates/legal/: privacy.html  terms.html
services/api/templates/macros/: empty-state.html  forms.html  navigation.html
services/api/templates/partials/: _cookie_consent.html  _delete_mission_modal.html  auth_brand.html  modal.html
services/scheduler/: pyproject.toml
services/scheduler/src/spectra_scheduler/: __init__.py  async_ops.py  leader.py  locking.py  locks.py  main.py  routes.py  service.py  state.py
services/scheduler/src/spectra_scheduler/loops/: __init__.py  core_loops.py  db_maintenance.py  docker_maintenance.py  infra_monitor.py
services/worker/: pyproject.toml
services/worker/src/spectra_worker/: __init__.py  __main__.py  command_jobs.py  helpers.py  lifecycle.py  main.py  notification_jobs.py  report_jobs.py  tool_jobs.py  training_jobs.py  vpn_jobs.py
(+1683 files in other folders)
