[project]
name = "spectra"
version = "0.1.0"
description = "AI-powered penetration testing platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["security", "penetration-testing", "vulnerability-assessment", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/domain",
    "packages/contracts",
    "packages/persistence",
    "packages/infrastructure",
    "packages/observability",
    "packages/ai-core",
    "packages/tools-core",
    "packages/storage-policy",
    "packages/tools",
    "packages/mission",
    "packages/scaling",
    "packages/billing",
    "packages/auth",
    "packages/system",
    "services/api",
    "services/ai",
    "services/scheduler",
    "services/worker",
]

[tool.uv.sources]
spectra-common = { workspace = true }
spectra-domain = { workspace = true }
spectra-contracts = { workspace = true }
spectra-persistence = { workspace = true }
spectra-infra = { workspace = true }
spectra-observability = { workspace = true }
spectra-ai-core = { workspace = true }
spectra-tools-core = { workspace = true }
spectra-storage-policy = { workspace = true }
spectra-tools = { workspace = true }
spectra-mission = { workspace = true }
spectra-scaling = { workspace = true }
spectra-billing = { workspace = true }
spectra-auth = { workspace = true }
spectra-system = { workspace = true }
spectra-api = { workspace = true }
spectra-ai = { workspace = true }
spectra-scheduler = { workspace = true }
spectra-worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-timeout>=2.4.0",
    "aiosqlite>=0.22.1",
    "playwright>=1.61.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.21",
    "pyright>=1.1.411",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
    "fastembed>=0.3.0",
]

[tool.bandit]
exclude_dirs = ["tests", "db/alembic"]
skips = ["B101"]  # assert is fine in non-production code

[tool.bandit.assert_used]
skips = ["*/tests/*", "*/test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP", "C4", "SIM", "PIE", "RUF", "PLE", "PLW"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E741",    # ambiguous variable name
    "E402",    # module-level import not at top (deferred imports)
    "S101",    # assert usage
    "S104",    # binding to all interfaces (expected for server)
    "S105",    # hardcoded password (false positives for config defaults)
    "S106",    # hardcoded password in func arg
    "S108",    # hardcoded temp file
    "S110",    # try-except-pass
    "S112",    # try-except-continue
    "S311",    # pseudo-random (not used for crypto)
    "S314",    # xml parsing (needed functionality)
    "S608",    # SQL injection (false positives with SQLAlchemy)
    "B008",    # function call in default arg (FastAPI Depends)
    "B024",    # abstract class without abstract methods
    "B027",    # empty method in abstract class
    "B904",    # raise without from in except (too noisy)
    "PLW0603", # global statement (intentional singleton/module-state patterns)
    "PLW2901", # loop variable overwrite (often intentional)
    "RUF012",  # mutable ClassVar annotation (noisy for ORMs/dataclasses)
]
# S = bandit rules via ruff (security)
# B = bugbear (common bugs)
# UP = pyupgrade
# C4 = unnecessary comprehension/list/dict calls
# SIM = simplifiable conditions/expressions
# PIE = misc. pie lints
# RUF = ruff-specific rules
# PLE = pylint errors
# PLW = pylint warnings

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S107", "S603", "S607", "SIM117"]
"**/__init__.py" = ["F401"]  # re-exports
# `import docker` must precede `from docker.errors` (docker-py); isort I001 reorders unsafely.
"packages/scaling/src/spectra_scaling/docker_client.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = [
    "scripts",
    "spectra_api",
    "spectra_ai",
    "spectra_ai_core",
    "spectra_auth",
    "spectra_billing",
    "spectra_common",
    "spectra_contracts",
    "spectra_domain",
    "spectra_infra",
    "spectra_mission",
    "spectra_observability",
    "spectra_persistence",
    "spectra_scaling",
    "spectra_scheduler",
    "spectra_storage_policy",
    "spectra_system",
    "spectra_tools",
    "spectra_tools_core",
    "spectra_worker",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["services", "packages"]
exclude = ["tests"]
reportMissingImports = "none"

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]
ignore_missing_imports = true
warn_unused_ignores = false
reportMissingModuleSource = "none"


# =============================================================================
# pytest configuration (merged from pytest.ini)
# =============================================================================
[tool.pytest.ini_options]
markers = [
    "asyncio: async test requiring asyncio event loop",
    "e2e: end-to-end test",
    "integration: integration test",
    "load: burst/load/rate-limit harness against the live Docker test stack",
    "slow: slow-running test",
    "live: live test (real DB and LLM, no mocking)",
    "network: test that requires outbound network access",
    "performance: moderate-concurrency latency or throughput smoke test",
    "soak: longer-running mixed-traffic stability test against the live Docker stack",
    "timeout: per-test timeout override",
    "ui: browser UI test (Playwright)",
    "property: property-based test (hypothesis)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = false
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=spectra_api",
    "--cov=spectra_ai",
    "--cov=spectra_ai_core",
    "--cov=spectra_billing",
    "--cov=spectra_common",
    "--cov=spectra_contracts",
    "--cov=spectra_domain",
    "--cov=spectra_mission",
    "--cov=spectra_persistence",
    "--cov=spectra_scaling",
    "--cov=spectra_scheduler",
    "--cov=spectra_storage_policy",
    "--cov=spectra_tools_core",
    "--cov=spectra_worker",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
filterwarnings = [
    # AsyncMock returns awaitable proxies; GC can warn from unittest.mock internals.
    "ignore:coroutine '.*' was never awaited:RuntimeWarning:unittest.mock",
]
pythonpath = [
    ".",
    "packages/common/src",
    "packages/domain/src",
    "packages/contracts/src",
    "packages/ai-core/src",
    "packages/persistence/src",
    "packages/mission/src",
    "packages/scaling/src",
    "packages/billing/src",
    "packages/storage-policy/src",
    "packages/tools-core/src",
    "services/ai/src",
    "services/api/src",
    "services/scheduler/src",
    "services/worker/src",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# =============================================================================
# coverage configuration (merged from .coveragerc)
# =============================================================================
[tool.coverage.run]
source = [
    "spectra_api",
    "spectra_ai",
    "spectra_ai_core",
    "spectra_billing",
    "spectra_common",
    "spectra_contracts",
    "spectra_domain",
    "spectra_mission",
    "spectra_persistence",
    "spectra_scaling",
    "spectra_scheduler",
    "spectra_storage_policy",
    "spectra_tools_core",
    "spectra_worker",
]
data_file = "/tmp/spectra-coverage/.coverage"
omit = [
    "spectra_platform/*/migrations/*",
    "db/alembic/*",
    "tests/*",
    "scripts/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "/tmp/spectra-coverage/html"
