[project]
name = "spectra-ai"
version = "0.1.0"
description = "Spectra AI service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-contracts",
    "spectra-ai-core[local-embeddings]",
    "spectra-persistence",
    "spectra-infra",
    "spectra-scaling",
    "httpx>=0.28.1",
    "json-repair>=0.58.5",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.48.0",
    "tensorzero>=2025.1.0",
    "fastembed>=0.3.0",
    "fastapi>=0.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_ai"]

