[project]
name = "spectra-api"
version = "0.1.0"
description = "Spectra API and UI service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-platform",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_api"]

