[project]
name = "spectra-api"
version = "0.1.0"
description = "Spectra API and UI service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-contracts",
    "spectra-persistence",
    "spectra-infra",
    "spectra-observability",
    "spectra-ai-core",
    "spectra-tools-core",
    "spectra-storage-policy",
    "spectra-tools",
    "spectra-mission",
    "spectra-scaling",
    "spectra-billing",
    "spectra-auth",
    "spectra-system",
    "uvicorn[standard]>=0.48.0",
    "fastapi>=0.136.3",
    "starlette>=1.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "asyncpg>=0.31.0",
    "docker>=7.0.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.8.0",
    "nh3>=0.2.0",
    "pydantic[email]>=2.12.0",
    "pyotp>=2.9.0",
    "redis[hiredis]>=5.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.48",
    "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_api"]

# Ship the web UI assets inside the wheel so the runtime image is just the venv.
# (spectra_api.paths.api_assets_root locates these next to the installed package.)
[tool.hatch.build.targets.wheel.force-include]
"static" = "spectra_api/static"
"templates" = "spectra_api/templates"

