[project]
name = "spectra-scheduler"
version = "0.1.0"
description = "Spectra scheduler and infrastructure control service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-tools-core",
    "spectra-platform",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_scheduler"]

