[project]
name = "spectra-scheduler"
version = "0.1.0"
description = "Spectra scheduler and infrastructure control service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-tools-core",
    "spectra-tools",
    "spectra-contracts",
    "spectra-ai-core",
    "spectra-persistence",
    "spectra-infra",
    "spectra-mission",
    "spectra-scaling",
    "spectra-billing",
    "spectra-auth",
    "spectra-system",
    "uvicorn[standard]>=0.48.0",
    "fastapi>=0.115.0",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_scheduler"]
