[project]
name = "spectra-worker"
version = "0.1.0"
description = "Spectra Kali tools worker service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-tools-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_worker"]

