[project]
name = "spectra-worker"
version = "0.1.0"
description = "Spectra Kali tools worker service."
requires-python = ">=3.11"
dependencies = [
    "spectra-common",
    "spectra-domain",
    "spectra-tools-core",
    "spectra-contracts",
    "spectra-ai-core",
    "spectra-persistence",
    "spectra-infra",
    "spectra-tools",
    "spectra-mission",
    "spectra-scaling",
    "spectra-billing",
    "spectra-system",
    "uvicorn[standard]>=0.48.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic[email]>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectra_worker"]

